--- a/BitboardTetris/BitboardTetris.vcxproj
+++ b/BitboardTetris/BitboardTetris.vcxproj
@@ -129,11 +129,13 @@
   <ItemGroup>
     <ClCompile Include="Console\ConsoleManager.cpp" />
     <ClCompile Include="Input\InputManager.cpp" />
+    <ClCompile Include="Logic\Block\BlockGenerator.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Console\ConsoleManager.h" />
     <ClInclude Include="Input\InputManager.h" />
+    <ClInclude Include="Logic\Block\BlockGenerator.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
